--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "IHMTDaiy/IHMTDaiy.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
+  avatar           : "Photo.png"
   name             : "Jericho Dai"
   pronouns         : # example: "she/her"  
   bio              : "Cancer Immunology"
