--- a/_config.yml
+++ b/_config.yml
@@ -38,7 +38,7 @@ author:
   researchgate     : # 
 
   # Repositories and software development
-  github           : "IHMTDaiy"  
+  github           : "Jericho-Dai"  
 
   # Social media
   instagram        : # Username
