--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ site_theme               : "default" # Currently available options are "default"
 title                    : "Jericho Dai"
 title_separator          : "-"
 name                     : "Jericho Dai"
-description              : &description "Your Name's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
+description              : "Cancer Immunology ; CART Threapy"   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : https://Jericho-Dai.github.io   ## The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Jericho-Dai/Jericho-Dai.github.io"
@@ -25,7 +25,7 @@ author:
   avatar           : "graph.png"
   name             : "Jericho Dai"
   pronouns         : #"代 宇"  
-  bio              : "Cancer Immunology; AI for Science"
+  bio              : "Cancer Immunology; AI for Science; Ph.D. Expected 2028"
   location         : "Hefei, China"
   employer         : "USTC"
   uri              : # URL
