--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ author:
   # Biographic information
   avatar           : "graph.png"
   name             : "Jericho Dai"
-  pronouns         : #"代 宇"  
-  bio              : "Cancer Immunology; AI for Science"
+  pronouns         : " "  
+  bio              : "Cancer Immunology; CART Threapy"
   location         : "Hefei, China"
   employer         : "USTC"
   uri              : # URL
